--- a/css/login.css
+++ b/css/login.css
@@ -13,12 +13,11 @@ html{
     box-sizing: inherit;
 }
 
-body{
+main{
     font-family: var(--fuente);
-    background-color: rgba(13, 75, 133, 1);
     display: flex;
     align-items: center;
-    height: 100vh;
+    padding: 5rem;
 }
 
 .contenedor{
@@ -29,7 +28,7 @@ body{
 }
 
 .imagen-formulario{
-    background-image: url('../img/bg.jpg');
+    background-image: url('/assets/img/imagen_ecologica.png');
     background-position: center center;
     background-size: cover;
     height: 200px;
@@ -99,7 +98,6 @@ body{
 
 .formulario{
     padding: 50px;
-    background-color: #fff;
     border-radius: 0px 10px 10px 0px;
 }
 
